# libflow

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  flow.cc  flow.h
hdrs/: block.h  buffer.h  circuit.h
scripts/: build.sh  install_dependencies.sh
src/: block.cc  buffer.cc  circuit.cc
tests/: asynchronous_flow_test.cc  basic_circuit_test.cc  flow_test.cc  synchronous_flow_test.cc
